assets/css/style.css
/* * * * * * Personal Stylesheet * * * * * */


body {
    background-image: url('https://images.pexels.com/photos/1020320/pexels-photo-1020320.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');  
    background-size: 100%;
}


/* Navbar Styles */
.my-navbar {
    background: #333 !important;
    border-bottom: 5px solid #4aaaa5 !important;
    box-shadow: 0px 15px 25px rgba(51,51,51,0.8);
}

.navbar-brand {
    font-size: 2em;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-variant: small-caps;
    letter-spacing: 3px;
    color: white !important;
    text-shadow: 6px 6px 2px rgba(0,0,0,0.5);
    transition: all 1s;
}

.nav-item,
.nav-item1{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.2em
}
.active {
    color: #4aaaa5 !important;
}

.navbar-brand:hover {
    color: #4aaaa5 !important;
}

.nav-item:hover {
    background-color: rgba(74, 170, 165, 0.7) !important;
    color: white !important;
}


/* About Me Main-Content */
.mainBio {
    margin-top: 1em;
    box-shadow: 15px 15px 25px rgba(51,51,51,0.5);
    background-color: rgba(211, 211, 211,0.8);
}

.bioImage {
    float: left;
    box-shadow: 10px 10px 25px rgba(51,51,51,0.5);
}

.header {
    margin: 1.4em;
    font-family: Roboto, sans-serif;
    font-size: 1.6em;
    font-weight: 600;
    text-shadow: 5px 4px 4px #A2A2A2;
    border-bottom: 1px solid #333;
}

p {
    font-family: 'Karla', sans-serif;
    font-size: 1.1em;
    line-height: 2em;
    padding: 14px 0px;
}


/* Contact Main-Content */
.my-form {
    background: #333;
    border: 3px solid #4aaaa5;
    margin-top: 1em;
    box-shadow: 15px 15px 25px rgba(51,51,51,0.8);
}

.form-title {
    font-size: 1.6em;
    padding: 1em 0em;
    letter-spacing: 2px;
    font-family: Roboto, sans-serif;
    text-shadow: 6px 6px 2px rgba(0,0,0,0.5);
    border-bottom: 2px solid #4aaaa5;
}

.label-text {
    font-family: Arial, Helvetica, sans-serif;
}

input[type=submit] {
    display: block;
    margin: auto;
    padding: 8px 32px;
    border-radius: 7px;
    font-size: 18px;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-variant: small-caps;
    letter-spacing: 2px;
    color: #1D4543;
    background: #4aaaa5;
    text-shadow: 3px 2px 3px rgba(255,255,255,.2);
}

input[type=submit]:hover {
    background: #3e918c;
}


/* Gallery Main-Content */
.jumbotron-heading {
    font-size: 2.5em;
    font-family: 'Roboto Slab', serif;
    letter-spacing: 0.5em;
    line-height: 3em;
    color: white;
}

.my-lead {
    font-weight: 100;
}

.my-album {
    background: #333 !important;
    border: 4px solid #4aaaa5;
    box-shadow: 15px 15px 25px rgba(51,51,51,0.8);
}

.my-jumbo {
    background: #333;
    border: 4px solid #4aaaa5;
    margin: 1em 0;
    box-shadow: 15px 15px 25px rgba(51,51,51,0.8);
}

.gallery-title {
    font-size: 1.6em;
    padding: 1em 0em;
    letter-spacing: 2px;
    font-family: Roboto, sans-serif;
    color: white;
    text-shadow: 6px 6px 2px rgba(0,0,0,0.5);
    border-bottom: 2px dotted #4aaaa5;
}

.card {
    margin: 1.5em;
    background: #4aaaa5;
    color: white;
    transition: all 1s;
    border: 4px solid #4aaaa5;

}
.card:hover {
    transform: scale(1.05)
}


/* Footer */
footer {
    width: 100%;
    background-color: #333;
    border-top: 5px solid #4aaaa5;
    box-shadow: 0px -10px 25px rgba(51,51,51,0.8);
}

.contactLinks {
    display: inline-block;
}

.contactLinks a:hover {
    color: #4aaaa5 !important;
}

li {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1em
}


/* * * * Sticky Footer * * * */
.sticky-footer{
   flex: 1 0 auto;
}

html, body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

.footer {
    flex-shrink: 0;
    padding: 0.75em;
}

.navbar-toggler {
    position: absolute;
    top: 0;
}


/* Media Query */
@media (max-width: 767px) {
    .navbar-brand {
        text-align: center !important;
        
    }
    .navbar-toggler {
        position: relative;
        margin: auto !important;
        margin-top: 0.5em !important;
        margin-bottom: 0.5em !important;
    }
}

